<resources>
    <string name="app_name">Secret Palpatine</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Continue</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalide_name">Name is required</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="signup_failed">Signup failed</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="signed_out">Sign out</string>
    <string name="mainmenu_toolbar_title">Start</string>
    <string name="mainmenu_header">Secret Palpatine</string>
    <string name="mainmenu_subheader">Stop the Secret Palpatine</string>
    <string name="mainmenu_startgame_button">Start a Game</string>
    <string name="mainmenu_invites_button">Invites</string>
    <string name="mainmenu_friends_button">Friends</string>
    <string name="logout">Logout</string>
    <string name="toSignUp">Need an Account?</string>

    <string name="submenu_invites_toolbar_title">Invites</string>
    <string name="submenu_friends_toolbar_title">Friends</string>

    <string name="membership_message">You are a %1$s</string>
    <string name="team_message">Your Team is</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="accept">Accept</string>
    <string name="friendRequest">%1$s wants to be your friend!</string>

    <string name="menu_add">Add</string>
    <string name="error_accept_friend">Error while accepting the friend request</string>
    <string name="success_accept_friend">Friend request accepted</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="main_menu_fragment_label">Main Menu</string>
    <string name="game_overlay_team_fragment_label">Team Overview</string>

    <string name="invite_menu_fragment_label">Invite Menu</string>
    <string name="game_membership_fragment_label">Game Membership</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="friends_menu_fragment_label">friends_menu_fragment</string>
    <string name="start_game_menu_fragment_label">Start Game Menu</string>
    <string name="add_friends_fragment_label">Add Friends</string>
    <string name="presidential_power">Presidential Power</string>
    <string name="presidential_power_desc">Select a player to kill!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="government_election_header">Vote on the government</string>
    <string name="government_election_desc">Do you want %1$s to be your president and %2$s to be your chancellor?</string>
    <string name="yes_option_for_chancellor_vote">Yes option for chancellor vote</string>
    <string name="no_option_for_chancellor_vote">No option for chancellor vote</string>
    <string name="yes_option_for_veto_vote">Yes option for veto vote</string>
    <string name="no_option_for_veto_vote">No option for veto vote</string>
    <string name="president_discard_policy_title">You are the President!\nDiscard one Policy.</string>
    <string name="chancellor_discard_policy_title">You are the Chancellor!\nDiscard one Policy.</string>
    <string name="discard_policy_description">Policy to be discarded</string>
    <string name="team_secret_role_header">You are a Loyalist!</string>
    <string name="team_desc">Your team:</string>
    <string name="nominate_chancellor_title">You run for President.\nNominate your Chancellor.</string>
    <string name="nominate_chancellor_confirm">Nominate Chancellor</string>
    <string name="execute_player_title">Presidential Power: Execution\nExecute a Player!</string>
    <string name="execute_player">Execute %1$s</string>
    <string name="execute_player_default">Select a Player to execute</string>

    <string name="policy_peek_desc">These are the 3 Policies available to the next Government</string>
    <string name="players_count">"Players accepted: >%1$s"</string>
    <string name="player_name">%1$s</string>
    <string name="player_state">State - %1$s</string>
    <string name="player_role">%1$s</string>
    <string name="join_game_id">Game Id: %1$s!</string>
    <string name="winner">"And the winners are ... "</string>
    <string name="player_membership">"is a "</string>
    <string name="invite_url_template">https://www.secret-sith.com/join-game?game_id=%1$s</string>
    <string name="join_url_text">Invite Link</string>
    <string name="copy_succcess">Copied the Link to the Clipboard</string>
    <string name="end_game">End game</string>
    <string name="mainmenu_manual_button">How to play</string>
    <string name="credits">Credits</string>
    <string name="credits_fragment_label">Show Credits</string>
    <string name="submenu_credits_toolbar_title">Credits &amp; License</string>
    <string name="license_depiction">License Depiction</string>
    <string name="sh_creator">Secret Sith was created by Mike Boxleiter, Tommy Maranges, Max Temkin, and Mac Schubert.</string>
    <string name="starwars_1">All Star Wars art is added onto the base art of the Secret H. PnP. Two pieces of artwork were modified and accredited below. All other artwork/clip art are stock movie photos or created by Tom Reuhl.</string>
    <string name="artwork_header">ARTWORK:</string>
    <string name="artwork_content">Jar Jar Binks - The New Essential Guide to Characters - Original Designer / Artist: Michael Sutfin\nEmperor Palpatine - Star Wars Galaxies Trading Card Game - The Nighsister’s Revenge Original Designer / Artist: Kieran Yanner</string>
    <string name="license">Secret Sith is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</string>
    <string name="rights_header">YOU ARE FREE TO:</string>
    <string name="rights_content">- Share: copy and redistribute the game in any medium or format\n- Adapt: remix, transform, and build upon the game.</string>
    <string name="terms_header">UNDER THE FOLLOWING TERMS:</string>
    <string name="terms_content">- Attribution: If you make something using the game, you need to give us credit and link back to us, and you need to explain what you changed.\n- Non-Commercial: You can’t use the game to make money.\n- Share Alike: If you remix, transform, or build upon the game, you have to release your work under the same Creative Commons license that we use (BY-NC-SA 4.0).\n- No additional restrictions: You can’t apply legal terms or technological measures to your work that legally restrict others from doing anything the license allows. That means you can’t submit anything using the game to any app store without the approval.</string>
    <string name="text_failed_governments">Failed Governments</string>
    <string name="players">"Players in this Game: "</string>
    <string name="vote_state">Vote</string>
    <string name="playerholder">...</string>
    <string name="add_friends_empty">"Type in a name to search for new people to play with :) "</string>
    <string name="add_friends_button">Add as Friends</string>
    <string name="veto_consent_title">Chancellor %1$s wishes to veto this agenda. Do you consent?</string>
    <string name="discard_policy_veto_button">I wish to veto this agenda.</string>
    <string name="yes">YES</string>
    <string name="no">No</string>
    <string name="player_killed">You got executed...</string>
    <string name="killed_other_players_header">"Take a peek at the other players: "</string>

</resources>
