<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/gamePendingFragment">

    <fragment
        android:id="@+id/gamePendingFragment"
        android:name="com.secret.palpatine.ui.mainmenu.GamePendingFragment"
        android:label="GamePendingFragment" >
        <action
            android:id="@+id/action_gamePendingFragment_to_mainMenuFragment"
            app:destination="@id/mainMenuFragment" />
    </fragment>


    <fragment
        android:id="@+id/mainMenuFragment"
        android:name="com.secret.palpatine.ui.mainmenu.MainMenuFragment"
        android:label="@string/main_menu_fragment_label"
        tools:layout="@layout/fragment_mainmenu">

        <action
            android:id="@+id/action_mainMenuFragment_to_inviteMenuFragment"
            app:destination="@id/inviteMenuFragment" />
        <action
            android:id="@+id/action_mainMenuFragment_to_friendsMenuFragment"
            app:destination="@id/friendsMenuFragment" />
        <action
            android:id="@+id/action_mainMenuFragment_to_startGameMenuFragment"
            app:destination="@id/startGameMenuFragment" />
    </fragment>

    <fragment
        android:id="@+id/inviteMenuFragment"
        android:name="com.secret.palpatine.ui.mainmenu.InviteMenuFragment"
        android:label="@string/invite_menu_fragment_label"
        tools:layout="@layout/fragment_invitemenu">
    </fragment>

    <fragment
        android:id="@+id/friendsMenuFragment"
        android:name="com.secret.palpatine.ui.mainmenu.FriendsFragment"
        android:label="@string/friends_menu_fragment_label"
        tools:layout="@layout/fragment_friendtabs" >
        <action
            android:id="@+id/action_friendsMenuFragment_to_addFriendsFragment"
            app:destination="@id/addFriendsFragment" />
    </fragment>

    <fragment
        android:id="@+id/startGameMenuFragment"
        android:name="com.secret.palpatine.ui.mainmenu.StartGameMenuFragment"
        android:label="@string/start_game_menu_fragment_label"
        tools:layout="@layout/fragment_start_game_menu" >
        <action
            android:id="@+id/action_startGameMenuFragment_to_gamePendingFragment"
            app:popUpTo="@id/gamePendingFragment"
            app:destination="@id/gamePendingFragment" />
    </fragment>

    <fragment
        android:id="@+id/addFriendsFragment"
        android:name="com.secret.palpatine.ui.mainmenu.FriendsAddFragment"
        android:label="@string/add_friends_fragment_label"
        tools:layout="@layout/fragment_add_friends" />

</navigation>
