<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlayBackground"
    android:orientation="vertical"
    tools:context=".ui.game.VoteChancellorFragment">

    <TextView
        android:id="@+id/government_election_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/government_election_header"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/government_election_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/government_election_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/button_vote_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/yes_option_for_chancellor_vote"
            android:src="@drawable/yes" />

        <ImageButton
            android:id="@+id/button_vote_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/no_option_for_chancellor_vote"
            android:padding="10dp"
            android:src="@drawable/no" />
    </LinearLayout>

</LinearLayout>