<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlayBackground"
    android:paddingHorizontal="64dp"
    tools:context=".ui.game.VoteGovernmentFragment">

    <TextView
        android:id="@+id/vote_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/overlay_header_background"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/government_election_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/button_vote_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/yes_option_for_chancellor_vote"
        android:scaleType="fitCenter"
        android:src="@drawable/vote_yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_vote_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vote_title"
        app:layout_constraintVertical_bias="1" />

    <ImageButton
        android:id="@+id/button_vote_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/no_option_for_chancellor_vote"
        android:scaleType="fitCenter"
        android:src="@drawable/vote_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_vote_yes"
        app:layout_constraintTop_toBottomOf="@id/vote_title"
        app:layout_constraintVertical_bias="1" />


</androidx.constraintlayout.widget.ConstraintLayout>