<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlayBackground"
    android:paddingHorizontal="64dp"
    app:layoutDescription="@xml/game_vote_fragment_scene"
    app:layout_constraintEnd_toEndOf="@+id/button_vote_yes_veto"
    app:layout_constraintStart_toEndOf="@+id/button_vote_yes_veto"
    tools:context=".ui.game.AcceptVetoFragment">

    <TextView
        android:id="@+id/vote_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/overlay_header_background"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/presidential_power_veto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_vote_yes_veto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_vote_no_veto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vote_title"
        app:layout_constraintVertical_bias="1" />

    <Button
        android:id="@+id/button_vote_no_veto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/no_option_for_veto_vote"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_vote_yes_veto"
        app:layout_constraintTop_toBottomOf="@id/vote_title"
        app:layout_constraintVertical_bias="1" />


</androidx.constraintlayout.widget.ConstraintLayout>